--- a/team.html
+++ b/team.html
@@ -431,7 +431,7 @@ header .header-content p {
                 </div>
             </div>
             <h3 class="name">Meeravathi</h3>
-            <h3 class="sub-name">Frontend Developer</h3>
+            <h3 class="sub-name">Frontend Developer & Programer</h3>
         </div>
     </div>
     <div class="content">
@@ -512,7 +512,7 @@ header .header-content p {
                    </div>
                </div>
                <h3 class="name">Kiruthika</h3>
-               <h3 class="sub-name">Designer</h3>
+               <h3 class="sub-name">Develover & Designer</h3>
            </div>
        </div>
        <div class="content">
@@ -568,7 +568,7 @@ header .header-content p {
                 </div>
             </div>
             <h3 class="name">Mohamed Jiyavudeen</h3>
-            <h3 class="sub-name">Frontend Developer</h3>
+            <h3 class="sub-name">Designer</h3>
         </div>
     </div>
     <div class="content">
@@ -649,7 +649,7 @@ header .header-content p {
                </div>
            </div>
            <h3 class="name">Sriraam</h3>
-           <h3 class="sub-name">Backend Developer</h3>
+           <h3 class="sub-name">Designer</h3>
        </div>
    </div>
    <div class="content">
